# jibu

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
jibu/llm/: language.py  prompt.py
tests/: test_jibu.py
